--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-retry": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.0",
     "connect-mongo": "^5.0.0",
