--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.11.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react-icons": "^4.9.0",
-    "stripe": "^12.7.0"
+    "stripe": "^12.7.0",
+    "twilio": "^4.13.0"
   }
 }
